# mylabs_google_adk

./: .gitignore  CLAUDE.md  adk-components-learning-plan.md
lab1_context_state/: 01_context_types.py  02_state_prefixes.py  03_state_in_tools.py  04_state_in_instructions.py  05_callbacks_with_state.py  README.md  __init__.py  main.py  pyproject.toml  requirements.txt
lab2_sessions_memory/: 01_session_basics.py  02_session_lifecycle.py  04_memory_service.py  05_cross_session_memory.py  README.md  __init__.py  main.py  pyproject.toml  requirements.txt
lab3_callbacks_plugins/: 05_plugins.py  (+9 more)
lab5_evaluation/: 01_evaluation_basics.py  01_first_evaluation.py  02_response_evaluation.py  03_trajectory_evaluation.py  04_custom_evaluators.py  04_multiturn_evaluation.py  05_custom_rubrics.py  05_user_simulation.py  06_pytest_integration.py  07_user_simulation.py  DESIGN.md  README.md  __init__.py  main.py  pyproject.toml  requirements.txt  test_travel_agent.py
lab5_evaluation/docs/: 01-Evaluation-Basics.md  02-Response-Evaluation.md  03-Trajectory-Evaluation.md  04-Custom-Evaluators.md  05-User-Simulation.md  Overview.md  Quick-Reference.md  README.md
lab5_evaluation/scenarios/: conversation_scenarios.json  session_input.json
lab5_evaluation/tests/: 01_basic.test.json  02_response.test.json  03_trajectory.test.json  04_multiturn.test.json  05_rubrics.test.json  test_config_all_metrics.json  test_config_multiturn.json  test_config_response.json  test_config_rubrics.json  test_config_trajectory.json  test_config_user_sim.json
lab5_evaluation/travel_agent/: agent.py
(+42 files in other folders)
